# kls-hasher

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile.am  README.md  build.sh  configure.ac  format
src/: main.c
tests/: .gitignore
tests/errors/: bad_call.k  bad_call.k.stderr  bad_call.k.stdout
